# frr

./: .clang-format  .dir-locals.el  .dockerignore  .rustfmt.toml  Makefile.am  configure.ac
bgpd/: bgp_addpath.c  bgp_addpath.h  bgp_advertise.c  bgp_advertise.h  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_attr_evpn.c  bgp_attr_evpn.h  bgp_bfd.c  bgp_bfd.h  bgp_bmp.c  bgp_bmp.h  bgp_btoa.c  bgp_clist.c  bgp_clist.h  bgp_community.c  bgp_community.h  bgp_community_alias.c  bgp_conditional_adv.c  bgp_damp.c  bgp_damp.h  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_dump.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_encap_tlv.c  bgp_encap_tlv.h  bgp_encap_types.h  bgp_evpn.c  bgp_evpn.h  bgp_evpn_mh.c  bgp_evpn_mh.h  bgp_evpn_private.h  bgp_evpn_vty.c  bgp_evpn_vty.h  bgp_filter.c  (+60 more)
lib/: admin_group.c  admin_group.h  affinitymap.c  affinitymap.h  affinitymap_cli.c  affinitymap_northbound.c  agentx.c  agg_table.h  asn.c  asn.h  atomlist.c  atomlist.h  base64.c  base64.h  bfd.c  bfd.h  bitfield.h  buffer.c  buffer.h  checksum.c  clippy.c  command.c  command.h  command_graph.c  command_graph.h  command_match.c  command_match.h  command_py.c  compiler.h  cspf.c  cspf.h  csv.c  csv.h  darr.c  darr.h  db.c  debug.h  defaults.c  defaults.h  distribute.c  (+217 more)
mgmtd/: mgmt.c  mgmt.h  mgmt_be_adapter.c  mgmt_be_adapter.h  mgmt_db.c  mgmt_db.h  mgmt_defines.h  mgmt_ds.c  mgmt_ds.h  mgmt_fe_adapter.c  mgmt_fe_adapter.h  mgmt_fe_client_vty.c  mgmt_history.c  mgmt_history.h  mgmt_main.c  mgmt_txn.c  mgmt_txn.h  mgmt_txn_config.c  mgmt_txn_priv.h  mgmt_vty.c  mgmt_vty.h  subdir.am  yang_cli_custom.c  yang_cli_custom.h
nhrpd/: nhrp_nhs.c
ospfd/: ospf_abr.c  ospf_abr.h  ospf_api.c  ospf_api.h  ospf_apiserver.c  ospf_apiserver.h  ospf_asbr.c  ospf_asbr.h  ospf_ase.c  ospf_bfd.c  ospf_bfd.h  ospf_dump.c  ospf_dump.h  ospf_dump_api.c  ospf_ext.c  ospf_ext.h  ospf_flood.c  ospf_flood.h  ospf_gr.c  ospf_gr.h  ospf_gr_helper.c  ospf_ia.c  ospf_interface.c  ospf_interface.h  ospf_ism.c  ospf_ism.h  ospf_ldp_sync.c  ospf_lsa.c  ospf_lsa.h  ospf_lsdb.c  (+36 more)
restconfd/: Cargo.toml  Cargo.toml.in  Makefile  README.org  cstruct.rs  main.rs  restconf_cbor.rs  restconf_cstruct.rs  restconf_main.rs  restconf_mgmtd.rs  restconf_msg.rs  restconf_native.rs  restconf_server.rs  restconf_uri.rs  sandbox.rs  subdir.am
restconfd/.cargo/: config.toml
rustlib/: Cargo.toml  build.rs  lib.rs
(+245 files in other folders)
