[package]
name = "restconfd"
version = "0.1.0"
edition = "2021"
default-run = "sandbox"

[[bin]]
name = "restconfd"
path = "restconf_main.rs"
test = false
bench = false

[[bin]]
name = "sandbox"
path = "sandbox.rs"
test = false
bench = false

[dependencies]
minicbor = { version = "0.24.0", default-features = false }
rouille = { version = "3.6.2", default-features = false }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"

# For logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"]}

[build-dependencies]
