[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["lib"]
crate-type = ["cdylib"]
path = "lib.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
